force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/CAZ_MultipagosConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Configuración por ambiente para la integración con Multipagos</description>
    <label>Configuración de multipagos</label>
    <pluralLabel>Configuraciones de multipagos</pluralLabel>
</CustomObject>