force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Account__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Account__c</fullName>
    <description>Representa el mp_account, es decir, el identificador único del comercio o cliente dentro de Multipagos</description>
    <label>Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>