force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Active__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define si esa configuración está habilitada para usarse</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>