force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Concept__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Concept__c</fullName>
    <description>Guarda el valor de mp_concept, que clasifica la categoría de cobranza o tipo de cobro/pago</description>
    <label>Concept</label>
    <length>50</length>
    <type>Text</type>
</CustomField>