force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Currency__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Currency__c</fullName>
    <description>Guarda el valor de mp_currency. El manual indica que 1 corresponde a pesos mexicanos y 2 a dólares estadounidenses.</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>