force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Environment__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Environment__c</fullName>
    <description>Indica el ambiente al que pertenece la configuración.</description>
    <label>Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>