force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_ExpectedRefererHost__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ExpectedRefererHost__c</fullName>
    <description>Guarda el host esperado en el referer del POST de regreso.</description>
    <label>Expected Referer Host</label>
    <type>Url</type>
</CustomField>