force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_FailureUrl__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FailureUrl__c</fullName>
    <label>Failure URL</label>
    <type>Url</type>
</CustomField>