force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_MerchantName__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MerchantName__c</fullName>
    <description>Nombre descriptivo del comercio o de la configuración</description>
    <label>Nombre del comercio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>