force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_MultipagosEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MultipagosEndpoint__c</fullName>
    <description>Aquí guardas la URL de Multipagos a la que vas a mandar el formulario POST</description>
    <label>Multipagos Endpoint</label>
    <type>Url</type>
</CustomField>