force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Node__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Node__c</fullName>
    <description>Guarda el valor de mp_node, que representa la división organizacional del cliente: sucursal, área, sección o similar</description>
    <label>Node</label>
    <length>50</length>
    <type>Text</type>
</CustomField>