force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_Product__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Product__c</fullName>
    <description>Guarda el valor que se enviará como mp_product. Para Multipagos, el manual define que el valor es 1</description>
    <label>Product</label>
    <length>10</length>
    <type>Text</type>
</CustomField>