force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_ReferencePrefix__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ReferencePrefix__c</fullName>
    <description>Prefijo que usarás al construir mp_reference</description>
    <label>Prefijo de referencia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>