force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_SimulationMode__c.field-meta.xml
<CustomField>
    <fullName>CAZ_SimulationMode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el ambiente debe tratarse como simulación.</description>
    <label>Modo simulación</label>
    <type>Checkbox</type>
</CustomField>