force-app/main/default/objects/CAZ_MultipagosConfiguration__mdt/fields/CAZ_SuccessUrl__c.field-meta.xml
<CustomField>
    <fullName>CAZ_SuccessUrl__c</fullName>
    <description>Es la URL que enviarás como mp_urlsuccess. Multipagos regresará a esta dirección cuando el pago sea exitoso.</description>
    <label>Success URL</label>
    <type>Url</type>
</CustomField>